# nim-kaleb

./: CLAUDE.md  markokraemer-ui-design-spec.html  package.json  playwright.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/stt/: route.ts
app/api/tts/: route.ts
app/components/: CognitiveStatus.module.css  CognitiveStatus.tsx  CommandInput.module.css  CommandInput.tsx  Starfield.tsx  Terminal.module.css  Terminal.tsx  TerminalContent.module.css  TerminalContent.tsx  TerminalHeader.module.css  TerminalHeader.tsx  TypewriterLine.tsx  VoiceInterface.module.css  VoiceInterface.tsx
app/hooks/: useAudioQueue.ts  useTerminalState.ts  useTypewriter.ts  useVoicePipeline.ts
lib/: memory.ts
memory/: context.json
memory/raw/: information.txt
scripts/: sync-context.ts
tests/: context-pipeline.spec.ts  tts-stt-pipeline.spec.ts
tts-server/: main.py  modal_tts.py  pyproject.toml  stt.py  tts.py
