[project]
name = "tts-server"
version = "0.1.0"
description = "STT + TTS server for Kebab Neural Interface"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.18",
  "numpy>=1.26.0",
  "soundfile>=0.12.1",
  "torch>=2.3.0",
  "transformers>=4.45.0",
  "peft>=0.13.0",
  "mlx-whisper>=0.4.2",
]

[tool.uv]
dev-dependencies = []
